Completed add campaign path.

--- a/app/views/campaigns/index.html.haml
+++ b/app/views/campaigns/index.html.haml
@@ -3,4 +3,6 @@
 #your-campaigns
   %h2 You do not have any campaigns.
 
+  %ul#campaigns= render @campaigns
+
   =link_to "Create a Campaign", new_campaign_path
