--- a/app/views/campaigns/new.html.haml
+++ b/app/views/campaigns/new.html.haml
@@ -1,1 +1,6 @@
 %h1 Create a Campaign
+
+= simple_form_for @campaign, url: campaigns_path do |f|
+  = f.input :name
+  = f.input :summary, :as => :text
+  = f.submit "Create Campaign"
