Minor edits to show page.

--- a/app/views/targets/show.html.haml
+++ b/app/views/targets/show.html.haml
@@ -1,5 +1,8 @@
 %h1= @campaign.name
 
 %h2 #{@target.first_name} #{@target.last_name}
+%p.location #{@target.zipcode}
+
+%p.phone-number= number_to_phone(@target.phone_number, area_code: true)
 
 %hr
