--- a/app/views/campaigns/show.html.haml
+++ b/app/views/campaigns/show.html.haml
@@ -6,4 +6,5 @@
  - @campaign.targets.each do |tar|
   %li #{tar.first_name} #{tar.last_name} - #{tar.phone_number} - #{tar.zipcode} - #{link_to "View", campaign_target_path(@campaign, tar)}
 
-= link_to "Add Target", new_campaign_target_path(@campaign)
+- if @is_admin
+ = link_to "Add Target", new_campaign_target_path(@campaign)
