Added Bootstrap and FontAwesome.  Styled welcome page and redirected user to campaigns_path if logged in.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,18 +6,12 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
-    %p.navbar-text.pull-right
-    - if user_signed_in?
-      Logged in as
-      = succeed "." do
-        %strong= current_user.email
-      = link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link'
-      |
-      \#{link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'}
-    - else
-      = link_to "Sign up", new_user_registration_path, :class => 'navbar-link'
-      |
-      \#{link_to "Login", new_user_session_path, :class => 'navbar-link'}
-    = notice
-    = alert
+    = render :partial => "layouts/navbar"
+
+    %div.notice
+      = notice
+    %div.alert
+      = alert
     = yield
+
+    = render :partial => "layouts/footer"
