--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,2 +1,17 @@
-%h1 Welcome to Remote Phonebanking
-=link_to "View Campaigns", campaigns_path
+.jumbotron
+  .container
+    %h1 Imagine a world …
+    %p … without call sheets. Without burner phones. Without a room full of people who can't hear themselves talking. Without a week between a call placed and the data entered.
+    %p That world is here. Now.
+
+.container
+  .row
+    .col-md-4
+      %h2 Create your campaign.
+      %p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+    .col-md-4
+      %h2 Invite volunteers.
+      %p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+    .col-md-4
+      %h2 Get results.
+      %p Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
