--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,6 +1,7 @@
-.container
-  %hr/
-  %footer
+
+%div.footer
+  %div.container
+    %hr
     %span
       Made with love in Nashville, Tennessee, by
       = succeed "." do
