--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,4 +1,4 @@
-.navbar.navbar-inverse.navbar-fixed-top{:role => "navigation"}
+.navbar.navbar-inverse.navbar-static-top{:role => "navigation"}
   .container
     .navbar-header
       %button.navbar-toggle.collapsed{"data-target" => ".navbar-collapse", "data-toggle" => "collapse", :type => "button"}
