--- a/app/assets/stylesheets/phonebanking.css.scss
+++ b/app/assets/stylesheets/phonebanking.css.scss
@@ -27,6 +27,14 @@
   padding: 2em 0;
 }
 
+.question {
+  span {
+    input {
+      margin-left: 10px;
+    }
+  }
+}
+
 .footer {
   position: absolute;
   bottom: 0;
