--- a/app/views/scripts/new.html.haml
+++ b/app/views/scripts/new.html.haml
@@ -1,9 +1,16 @@
-Add a Script for #{@campaign.name}
+%div.col-xs-6.col-lg-4
+  %h2 #{@campaign.name}
+  %p #{@campaign.summary}
 
-= simple_form_for [@campaign, @script] do |f|
-  = f.input :campaign_id, :as => :hidden, :input_html => { :value => @campaign.id }
-  = f.label :copy, 'Please provide a script for callers to use.'
-  = f.input :copy, :as => :text
-  = f.submit "Add Script"
-
-= link_to "Skip this Step", new_campaign_target_path(@campaign)
+%div.col-xs-12.col-sm-6.col-lg-8
+  .panel.panel-default
+    .panel-heading Add a Script for #{@campaign.name}
+    .panel-body
+      %p Please provide a script for callers to use.
+      = simple_form_for [@campaign, @script] do |f|
+        = f.input :campaign_id, :as => :hidden, :input_html => { :value => @campaign.id }
+        = f.input :copy, :as => :text
+        .form-group
+        = f.submit "Add Script", :class => "btn btn-default"
+      .form-group
+      = link_to "Skip this Step", new_campaign_target_path(@campaign)
