--- a/app/views/targets/show.html.haml
+++ b/app/views/targets/show.html.haml
@@ -1,30 +1,33 @@
-%h1= @campaign.name
+%div.col-xs-6.col-lg-4
+  %h2 #{@campaign.name}
+  %p #{@campaign.summary}
 
-%h2 #{@target.first_name} #{@target.last_name}
-%p.location #{@target.zipcode}
+%div.col-xs-12.col-sm-6.col-lg-8
+  %h2 #{@target.first_name} #{@target.last_name} <small>#{@target.zipcode}</small>
 
-%p.phone-number= number_to_phone(@target.phone_number, area_code: true)
+  %h1.text-center.phone-number= number_to_phone(@target.phone_number, area_code: true)
 
-%p.script= @script
+  %p Your call script:
+  %blockquote
+    %p.script.text-muted= @script
 
-= simple_form_for [@campaign, @target] do | target_form |
-  = target_form.label :has_been_called, 'Did you speak to a person or leave a voicemail?'
-  = target_form.collection_radio_buttons :has_been_called, [[true, 'Yes'] ,[false, 'No']], :first, :last
-
-  = target_form.simple_fields_for :responses, @response do | question1_form |
-    = question1_form.input :question, :as => :hidden, :input_html => { :value => "Was the target aware?" }
-    = question1_form.input :contacted_when, :as => :hidden, :input_html => { :value => Time.now }
-    = question1_form.input :campaign_id, :as => :hidden, :input_html => { :value => @campaign.id }
-    = question1_form.label :answer, 'Was #{@target.first_name} aware of #{@campaign.name}?'
-    = question1_form.collection_radio_buttons :answer, [[true, 'Yes'] ,[false, 'No']], :first, :last
-  = target_form.simple_fields_for :responses, @response do | question2_form |
-    = question2_form.input :question, :as => :hidden, :input_html => { :value => "Does the target support the campaign?" }
-    = question2_form.input :contacted_when, :as => :hidden, :input_html => { :value => Time.now }
-    = question2_form.input :campaign_id, :as => :hidden, :input_html => { :value => @campaign.id }
-    = question2_form.label :answer, 'Does #{@target.first_name} support #{@campaign.name}?'
-    = question2_form.collection_radio_buttons :answer, [[true, 'Yes'] ,[false, 'No']], :first, :last
-  = target_form.submit 'Save Response'
-
-
-
-%hr
+  = simple_form_for [@campaign, @target] do | target_form |
+    %div.question
+      = target_form.label :has_been_called, 'Did you speak to a person or leave a voicemail?'
+      = target_form.collection_radio_buttons :has_been_called, [[true, 'Yes'] ,[false, 'No']], :first, :last
+    %div.question
+      = target_form.simple_fields_for :responses, @response do | question1_form |
+        = question1_form.input :question, :as => :hidden, :input_html => { :value => "Aware" }
+        = question1_form.input :contacted_when, :as => :hidden, :input_html => { :value => Time.now }
+        = question1_form.input :campaign_id, :as => :hidden, :input_html => { :value => @campaign.id }
+        = question1_form.label :answer, 'Was ' + @target.first_name + ' aware of ' + @campaign.name + '?'
+        = question1_form.collection_radio_buttons :answer, [[true, 'Yes'] ,[false, 'No']], :first, :last
+    %div.question
+      = target_form.simple_fields_for :responses, @response do | question2_form |
+        = question2_form.input :question, :as => :hidden, :input_html => { :value => "Supports the campaign" }
+        = question2_form.input :contacted_when, :as => :hidden, :input_html => { :value => Time.now }
+        = question2_form.input :campaign_id, :as => :hidden, :input_html => { :value => @campaign.id }
+        = question2_form.label :answer, 'Does ' +  @target.first_name + ' support ' + @campaign.name + '?'
+        = question2_form.collection_radio_buttons :answer, [[true, 'Yes'] ,[false, 'No']], :first, :last
+    .form-group
+    = target_form.submit 'Save Response', :class => "btn btn-default"
