--- a/app/views/campaigns/show.html.haml
+++ b/app/views/campaigns/show.html.haml
@@ -8,3 +8,8 @@
 
 - if @is_admin
  = link_to "Add Target", new_campaign_target_path(@campaign)
+ #invite
+ = simple_form_for @resource, :url => user_invitation_path(@resource) do |f|
+  = f.input :email
+  = f.input :invited_to_campaign, :as => :hidden, :input_html => { :value => @campaign.id }
+  = f.submit "Invite"
