--- a/app/views/campaigns/show.html.haml
+++ b/app/views/campaigns/show.html.haml
@@ -4,13 +4,21 @@
 
   - if @is_admin
     = link_to "Add Target", new_campaign_target_path(@campaign)
-    #invite
+
+    %hr
+
+    %div#invite
     = simple_form_for @resource, :url => user_invitation_path(@resource) do |f|
-      = f.input :email
+      = f.input :email, label: "Invite A Caller to Your Campaign", :class => 'invite'
       = f.input :invited_to_campaign, :as => :hidden, :input_html => { :value => @campaign.id }
-      = f.submit "Invite"
+      .form-group
+      = f.submit "Invite", :class => "btn btn-default"
 
 %div.col-xs-12.col-sm-6.col-lg-8
+  - if @uncalled_count
+    %div.call-button= link_to "Start Calling", campaign_target_path(@campaign, @campaign.targets.where(has_been_called: false).order("RANDOM()").first), class: "btn btn-primary btn-lg btn-block"
+  - else
+    %h1 This campaign has finished.
 
   - if @is_admin
     .panel.panel-default
@@ -18,11 +26,22 @@
       - if @campaign.targets.count >= 1
         %div.table-responsive
           %table.table#targets
+            %thead
+              %tr
+                %th Name
+                %th Phone #
+                %th Called?
+                %th
+            %tbody
             - @campaign.targets.each do |tar|
               %tr
                 %td #{tar.first_name} #{tar.last_name}
-                %td #{tar.phone_number}
-                %td #{tar.zipcode}
+                %td=  number_to_phone(tar.phone_number, area_code: true)
+                %td
+                  - if tar.has_been_called
+                    Yes
+                  - else
+                    No
                 %td #{link_to "View", campaign_target_path(@campaign, tar)}
       - else
         .panel-body
