Initial JS functionality for target show page hides the nested response attribute inputs if the target has not been called.

--- a/app/assets/stylesheets/phonebanking.css.scss
+++ b/app/assets/stylesheets/phonebanking.css.scss
@@ -27,7 +27,7 @@
   padding: 2em 0;
 }
 
-.question {
+#answered-call .question, #response .question {
   span {
     input {
       margin-left: 10px;
