If an admin, see a list of callers and delete a caller.

--- a/app/assets/stylesheets/phonebanking.css.scss
+++ b/app/assets/stylesheets/phonebanking.css.scss
@@ -27,6 +27,14 @@
   padding: 2em 0;
 }
 
+#callers {
+  width: 75%;
+  .destroy {
+    float: right;
+  }
+}
+
+
 #answered-call .question, #response .question {
   span {
     input {
