Changed button link copy on front page.

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -5,6 +5,8 @@
     %h1 Imagine a world …
     %p … without call sheets. Without burner phones. Without a room full of people who can't hear themselves talking. Without a week between a call placed and the data entered.
     %p That world is here. Now.
+    %p
+      = link_to "Get started", new_user_registration_path, :class => "btn btn-primary btn-lg"
 
 .container
   .row
