Removed lorem ipsum from front page, replaced with real copy.

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -9,13 +9,13 @@
       = link_to "Get started", new_user_registration_path, :class => "btn btn-primary btn-lg"
 
 .container
-  .row
+  .row#front-page
     .col-md-4
       %h2 Create your campaign.
-      %p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+      %p Upload a script and add targets with ease.
     .col-md-4
       %h2 Invite volunteers.
-      %p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+      %p No directions or parking required &mdash; just an e-mail address.
     .col-md-4
       %h2 Get results.
-      %p Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+      %p Polling numbers are no longer directly correlated to pizzas ordered.
