--- a/app/assets/stylesheets/phonebanking.css.scss
+++ b/app/assets/stylesheets/phonebanking.css.scss
@@ -51,7 +51,12 @@
   width: 60%;
 }
 
+#front-page {
+  margin-bottom: 15px;
+}
+
 .footer {
+  margin-top: 15px;
   position: absolute;
   bottom: 0;
   width: 100%;
